# Life-Margin-Index

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  references.bib
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
analysis/: README.md  build_all_country_table.py  build_minwage_oecd_table.py  build_minwage_overrides_template.py  build_pilot20_country_table.py  build_reality_oecd_table.py  run_empirical_demo.py
data/: lmi_country_observations_all_2022.csv  lmi_country_observations_all_2022_sources.json  lmi_country_observations_minwage_oecd_2022.csv  lmi_country_observations_pilot20_2022.csv  lmi_country_observations_reality_oecd_2022.csv  minwage_cost_inputs_2022.csv  minwage_cost_inputs_2022_template.csv
docs/: Collaboration_Policy.md  Install_Like_You_Are_5.md  LMI_CLI_Manual.md  LMI_Empirical_Demo.md  LMI_Framework_Overview.md  LMI_Methodology.md  LMI_Methodology_Changelog.md  LMI_Methodology_Versioning.md  LMI_Pilot20_Data_Method.md  LMI_Research_Paper.md  LMI_Visualization_Guide.md
docs/releases/: v0.1.0.md
examples/: example_calculations.md  sample_dataset.csv
src/: baseline_calculator.py  lmi.py  lmi_cli.py  lmi_report_cli.py  lmi_tool.py
tests/: test_baseline_calculator.py  test_lmi.py  test_lmi_cli.py  test_lmi_report_cli.py  test_lmi_tool.py
